--- a/youtube.html
+++ b/youtube.html
@@ -4,10 +4,172 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/video.css" />
   </head>
   <body>
-    <div>
-      <img src="" alt="" />
+    <div class="video-grid">
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-1.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-1.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-2.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-2.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-3.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-3.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-4.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-4.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-5.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-5.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="video-thumbnail">
+          <img
+            class="video-thumbnail-img"
+            src="image/thumbnail-6.webp"
+            alt="thumbnail 1"
+          />
+        </div>
+        <div class="video-info">
+          <div class="channel">
+            <img
+              class="channel-profile-img"
+              src="channel pictures/channel-6.jpeg"
+              alt="channel picture 1"
+            />
+          </div>
+          <div class="video-description">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views · 6 months ago</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
